feat: Implement category endpoints

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,11 +26,11 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_order_data:/var/lib/postgresql/data/
+      - postgres_data:/var/lib/postgresql/data/
     networks:
       - lanchonete-pedido-network
 volumes:
-  postgres_order_data:
+  postgres_data:
 networks:
   lanchonete-pedido-network:
     name: lanchonete-pedido-network
