--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=fiap-lanchonete_projeto-lanchonete-pedido
 sonar.organization=fiap-lanchonete
 
+sonar.tests=src/**/*.spec.ts,src/**/*test.ts
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=projeto-lanchonete-pedido
 #sonar.projectVersion=1.0
