--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,10 @@
 sonar.projectKey=fiap-lanchonete_projeto-lanchonete-pedido
 sonar.organization=fiap-lanchonete
 
-sonar.tests=src/**/*.spec.ts,src/**/*test.ts
+sonar.exclusions=**/node_modules/**
+
+sonar.coverage.exclusions=**/*.js,src/*main*.ts,**/*polyfills*.ts,**/*environment*.ts,**/*module.ts
+sonar.tests.inclusions=src/**/*.spec.js,src/**/*.spec.jsx,src/**/*.test.js,src/**/*.test.jsx
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=projeto-lanchonete-pedido
