fix: add lcov.info to sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,8 @@ sonar.exclusions=**/node_modules/**
 sonar.coverage.exclusions=**/*.js,src/*main*.ts,**/*polyfills*.ts,**/*environment*.ts,**/*module.ts
 sonar.tests.inclusions=src/**/*.spec.js,src/**/*.spec.jsx,src/**/*.test.js,src/**/*.test.jsx
 
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=projeto-lanchonete-pedido
 #sonar.projectVersion=1.0
