--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "test:e2e": "dotenv -e .env.test -- npx prisma migrate reset --force --skip-seed  && dotenv -e .env.test -- jest --runInBand --config ./test/jest-e2e.json;"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.1.17",
     "@prisma/client": "^5.7.1",
+    "axios": "^1.6.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
@@ -84,7 +86,7 @@
       ".d.ts",
       "<rootDir>/src/main.ts",
       "<rootDir>/src/adapters/database/helpers/prisma.helper.ts"
-  ],
+    ],
     "coverageDirectory": "./coverage",
     "testEnvironment": "node"
   }
