--- a/kubernetes/db/secrets.yaml
+++ b/kubernetes/db/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: postgres-secrets
+  name: postgres-pedido-secrets
 type: Opaque
 data:
   postgres_user: dGVzdA==
