--- a/kubernetes/api/service.yaml
+++ b/kubernetes/api/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: lanchonete-pedido
+  namespace: microservices
 spec:
   selector:
     app: lanchonete-pedido
