fix: update deployment

--- a/kubernetes/api/deployment.yaml
+++ b/kubernetes/api/deployment.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         app: lanchonete-pedido
     spec:
+      automountServiceAccountToken: false
       containers:
         - name: projeto-lanchonete-pedido
           image: rickwalking/lanchonete-pedido:latest
