--- a/kubernetes/api/deployment.yaml
+++ b/kubernetes/api/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: lanchonete-pedido
+  namespace: microservices
 spec:
   replicas: 1
   selector:
@@ -12,6 +13,7 @@ spec:
       labels:
         app: lanchonete-pedido
     spec:
+      automountServiceAccountToken: false
       containers:
         - name: projeto-lanchonete-pedido
           image: rickwalking/lanchonete-pedido:latest
@@ -31,3 +33,18 @@ spec:
                 secretKeyRef:
                   name: api-secret
                   key: database_url
+            - name: RMQ_URL
+              valueFrom:
+                secretKeyRef:
+                  name: api-secret
+                  key: rabbit_mq_url
+            - name: RMQ_QUEUE
+              valueFrom:
+                secretKeyRef:
+                  name: api-secret
+                  key: rmq_queue
+            - name: RMQ_QUEUE_DURABLE
+              valueFrom:
+                secretKeyRef:
+                  name: api-secret
+                  key: rmq_queue_durable
